--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<script src="node.js"></script>
  </head>
 <body>
-  <a id="sbar">&equiv</a>
+  <a id="sbar">&equiv;</a>
   <div id="links">
     <a id="Home" class="link">Home</a>
     <a class="link">Downloads</a>
     <a class="link">About</a>
   </div>
+  <button id="loginbtn">Login</button>
 </body>
