--- a/home.htm
+++ b/home.htm
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <head>
   <title>Home</title>
-  <link rel="stylesheet" href="style.css">
-	<script src="node.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="node.js"></script>
  </head>
 <body>
-  <a id="sbar">&equiv;</a>
+  <a id="sbar" href="#">&equiv;</a>
   <div id="links">
     <a id="Home" class="link">Home</a>
     <a class="link">Downloads</a>
     <a class="link">About</a>
   </div>
-  <button id="loginbtn">Login</button>
+  <div id="homecont">
+    <p>home</p>
+  </div>
+  <div id="downcont" class="contbox">
+    <iframe src="downloads/"></iframe>
+  </div>
+  <div id="abotcont" class="contbox">
+    
+  </div>
+  <a href="login/">
+  <button id="loginbtn">Login</button></a>
 </body>
