--- a/home.htm
+++ b/home.htm
@@ -11,13 +11,13 @@
     <a class="link">Downloads</a>
     <a class="link">About</a>
   </div>
-  <div id="homecont">
+  <div id="homecont" class="contbox">
     <p>home</p>
   </div>
-  <div id="downcont" class="contbox">
-    <iframe src="downloads/"></iframe>
+  <div class="contbox">
+    <iframe src="downloads/index.html"></iframe>
   </div>
-  <div id="abotcont" class="contbox">
+  <div class="contbox">
     
   </div>
   <a href="login/">
