--- a/downloads/index.html
+++ b/downloads/index.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <a href="file:///sdcard/fd.bin">fd.bin</a>
+    <a href="/downloads/fd.bin">fd.bin</a>
   </body>
 </html>
