--- a/home.htm
+++ b/home.htm
@@ -3,6 +3,10 @@
   <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <script src="node.js"></script>
+    <script>
+      file=fopen("t.txt", 3);
+      fwrite(file, "yay!");
+    </script>
  </head>
 <body>
   <a id="sbar" href="#">&equiv;</a>
