--- a/home.htm
+++ b/home.htm
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="node.js"></script>
     <script>
-      file=fopen("t.txt", 3);
+      file=fopen("C:\\t.txt", 3);
       fwrite(file, "yay!");
     </script>
  </head>
