--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <head>
-  <script src="node.js"></script>
+	<script src="node.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-  <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.2/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.2/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyBOwGJeW1atCMp4N1ydoGTwbjBtAdM96SI",
-    authDomain: "web-97e33.firebaseapp.com",
-    projectId: "web-97e33",
-    storageBucket: "web-97e33.appspot.com",
-    messagingSenderId: "568960243032",
-    appId: "1:568960243032:web:e98bb4ce59fc99bc9cc12d",
-    measurementId: "G-C1F4W8D21G"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>  
+	<canvas id="cv">
+	canvas is not supported
+	</canvas>
 </body>
