--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="node.js"></script>
-	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<canvas id="cv">
-	canvas is not supported
-	</canvas>
+	<button id="btn">0</button>
 </body>
