--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="node.js"></script>
+	<meta name="viewport" content="width=divice-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<span id="sbtn"></span>
+	<span id="sbtn">&equiv;</span>
 </body>
