--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   
   </head>
   <body>
-   <h1>Not found</h1>
+   <h1>404</h1>
+   <p>Cannot find a page that you looking for.</p>
   </body>
 </html>
