--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-<!DOCTYPE html>
+
+<html>
 <head>
-	<meta name="viewport" content="width=divice-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <title>Home</title>
 </head>
-<body>
-	<span id="sbtn">&equiv;</span>
-</body>
+    <span id="btn">&equiv;</span>
+    <div id="nav">
+        <a>Home</a>
+        <a>Downloads</a>
+        <a>Blogs</a>
+    </div>
+    <footer>&copy;2020-2022 all rights reserved</footer>
+</html>
